@@ -1,3 +1,10 @@
+Thu Nov 25 08:59:45 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/ndds/DataReader_T.cpp:
+        * connectors/dds4ccm/impl/ndds/convertors/SampleInfo.h:
+        * connectors/dds4ccm/impl/ndds/convertors/SampleInfoSeq.h:
+          Removed unneccasary streaming operators.
+
 Thu Nov 25 08:19:39 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * NEWS:
